--- a/tools/SEOInject/index.html
+++ b/tools/SEOInject/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" sizes="128x128" href="icons/logo-128x128.png">
     <link rel="icon" type="image/png" sizes="256x256" href="icons/logo-256x256.png">
     <meta name="theme-color" content="#667eea">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="tools/SEOInject/style.css">
 </head>
 
 <body>
@@ -221,7 +221,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="tools/SEOInject/script.js"></script>
 </body>
 
 </html>
