--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <p>&copy; 2025 Tool Hub. Built with ❤️ and deployed with Cloudflare Pages.</p>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
     <script>
         // Initialize the app
         document.addEventListener('DOMContentLoaded', () => {
