--- a/index.html
+++ b/index.html
@@ -114,6 +114,6 @@
     </footer>
     
     <!-- Load the frontend script -->
-    <script src="scripts/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
